--- a/configuration.dsc.yml
+++ b/configuration.dsc.yml
@@ -55,7 +55,7 @@ properties:
         source: winget
     - resource: Microsoft.WinGet.DSC/WinGetPackage
       directives:
-        description: Install Powershell
+        description: Install Powershell 7
         allowPrerelease: true
       settings:
         id:  Microsoft.PowerShell
@@ -90,6 +90,13 @@ properties:
       settings:
         id:  Python.Python.3.12
         source: winget
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      directives:
+        description: Install SQL Server Management Studio
+        allowPrerelease: true
+      settings:
+        id:  Microsoft.SQLServerManagementStudio
+        source: winget
 
     ## Styling ##
     - resource: Microsoft.WinGet.DSC/WinGetPackage
@@ -122,5 +129,14 @@ properties:
       settings:
         id:  Spotify.Spotify
         source: winget
+
+    ## Repos ##
+    # - resource: GitDsc/GitClone
+    #   directives:
+    #     description: Clone a repository
+    #     allowPrerelease: true
+    #   settings:
+    #     HttpsUrl: https://github.com/microsoft/winget-cli.git
+    #     RootDirectory: '${WingetConfigRoot}/'
    
   configurationVersion: 0.2.0
